# textile-packing-planner

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.bat
app/: __init__.py  config.py  main.py
app/algorithms/: __init__.py  fabric_roll_packing.py  garment_packing.py  orientations.py  vehicle_selector.py
app/domain/: enums.py  exceptions.py  models.py
app/importers/: __init__.py  column_detector.py  excel_reader.py  import_models.py
app/repositories/: box_repository.py  database.py  packing_plan_repository.py  product_repository.py  profile_repository.py  schema.py  vehicle_repository.py
app/services/: application_settings_service.py  backup_service.py  export_service.py  packing_service.py  product_matching_service.py
app/ui/: main_window.py
app/ui/screens/: backup_screen.py  boxes_screen.py  excel_import_screen.py  history_screen.py  manual_order_screen.py  order_preview_screen.py  packing_settings_screen.py  plan_detail_screen.py  products_screen.py  profiles_screen.py  (+4 more)
app/utils/: units.py
sample_data/: mock_orders.xlsx  mock_orders_error_cases.xlsx
scripts/: build_windows.ps1  create_mock_data.py
tests/unit/: test_application_settings_service.py  test_backup_service.py  test_box_repository.py  test_database.py  test_excel_reader.py  test_export_service.py  test_fabric_roll_packing.py  test_garment_packing.py  test_packing_plan_repository.py  test_packing_service.py  test_product_matching_service.py  test_product_repository.py  test_profile_repository.py  test_units.py  test_vehicle_repository.py  test_vehicle_selector.py
